# abe_gpsw

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  abe.wit  cbindgen.sh  cbindgen.toml  pyproject.toml  rustfmt.toml
.cargo/: config
.github/workflows/: benches.yml  ci.yml  release.yml  release_android.yml  release_ios.yml  release_on_tags.yml  release_wasi.yml  release_wasm.yml
benches/: benches.rs
ci/: cosmian_java_lib.sh  cosmian_js_lib.sh  detect_breaking_changes.sh
python/wasi/: README.md  abe.py  bindings.py  confidential-data-access-basic.ipynb  confidential-data-access-full.ipynb  requirements.txt  wasi.sh
src/: bench.rs  demo.rs  error.rs  lib.rs  mod_tests.rs  msp.rs  msp_tests.rs  policy.rs  policy_tests.rs
src/bilinear_map/: bls12_381.rs  mod.rs
src/core/: demo.rs  engine.rs  mod.rs  msp.rs  policy.rs  policy_tests.rs
src/core/bilinear_map/: bls12_381.rs  mod.rs
src/core/gpsw/: abe.rs  mod.rs  scheme.rs
src/core/tests/: engine_tests.rs  gpsw_tests.rs  master_public_key.txt  mod.rs  msp_tests.rs  policy.txt  policy_tests.rs  user_decryption_key.txt
src/ffi/: README.md  error.rs  mod.rs
src/gpsw/: abe.rs  mod.rs
src/hybrid_crypto/: mod.rs  tests.rs
src/interfaces/: asymmetric_crypto.rs  mod.rs
src/interfaces/ffi/: README.md  error.rs  generate_gpsw_keys.rs  hybrid_gpsw_aes.rs  mod.rs  structs.rs  tests.rs
src/interfaces/hybrid_crypto/: cipher.rs  mod.rs  statics.rs  structs.rs
src/interfaces/hybrid_crypto/tests/: fin_confidential_user_key.json  fin_top_secret_user_key.json  mod.rs  public_master_key.json
src/interfaces/old/: master_key.rs  mod.rs  static.rs  static_tests.rs  user_keypair.rs
src/interfaces/pyo3/: generate_gpsw_keys.rs  hybrid_gpsw_aes.rs  mod.rs
src/interfaces/pyo3/tests/: demo.py  test.sh
src/interfaces/pyo3/tests/notebooks/: confidential-data-access-basic.ipynb  confidential-data-access-full.ipynb  confidential-data-access.ipynb  requirements.txt
src/interfaces/wasi/: bindings.rs  mod.rs  wit_generation.rs  wit_implementation.rs
src/interfaces/wasi/tests/: mod.rs
src/interfaces/wasm_bindgen/: generate_gpsw_keys.rs  hybrid_gpsw_aes.rs  hybrid_gpsw_aes_decryption.rs  hybrid_gpsw_aes_encryption.rs  mod.rs  tests.rs
src/public_key/: mod.rs
