[package]
authors = [
  "Julien Doget <julien.doget@cosmian.com>",
  "Bruno Grieder <bruno.grieder@cosmian.com>",
  "Emmanuel Coste <emmanuel.coste@cosmian.com>",
  "Thibaud Genty <thibaud.genty@cosmian.com>",
]
description = "ABE GPSW scheme for BLS pairing implemented in rust"
documentation = "https://docs.rs/abe_gpsw/"
edition = "2018"
license = "MIT/Apache-2.0"
name = "abe_gpsw"
repository = "https://github.com/Cosmian/abe_gpsw"
version = "0.6.7"

[lib]
name = "abe_gpsw"
crate-type = ["lib", "cdylib", "staticlib"]
# The cdylib is only interesting if the `--features ffi` flag is set on build
# This does not seem to be actionable conditionally https://github.com/rust-lang/cargo/issues/4881

[features]
interfaces = ["cosmian_crypto_base"]
ffi = ["interfaces"]
wasm_bindgen = ["interfaces", "js-sys", "wasm-bindgen", "wasm-bindgen-test"]
wasi = ["interfaces"]
wasi_impl = ["cosmian-wit-bindgen-rust", "wasi", "witgen"]
wit = ["witgen", "wasi"]

[dependencies]
anyhow = { package = "eyre", version = "0.6.0" }
cosmian_bls12_381 = "0.4"
cosmian_crypto_base = { version = "0.5.2", optional = true }
cosmian-wit-bindgen-rust = {version = "0.1", optional = true }
ff = "0.9"
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"] }
group = "0.9"
hex = "0.4"
lazy_static = "1.4.0"
rand = "0.8"
rand_core = { version = "0.5", features = ["getrandom"] }
rand_hc = "0.3"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1"
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }
witgen = { version = "0.4.0", optional = true }


[[bin]]
name = "bench_abe_gpsw"
path = "src/bench.rs"
