[package]
name = "abe_gpsw"
authors = [
  "Julien Doget <julien.doget@cosmian.com>",
  "Bruno Grieder <bruno.grieder@cosmian.com>",
  "Emmanuel Coste <emmanuel.coste@cosmian.com>",
  "Thibaud Genty <thibaud.genty@cosmian.com>",
]
description = "ABE GPSW scheme for BLS pairing implemented in rust"
documentation = "https://docs.rs/abe_gpsw/"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Cosmian/abe_gpsw"
version = "1.0.0"

[lib]
name = "abe_gpsw"
crate-type = ["lib", "cdylib", "staticlib"]
# The cdylib is only interesting if the `--features ffi` flag is set on build
# This does not seem to be actionable conditionally https://github.com/rust-lang/cargo/issues/4881

[features]
interfaces = ["cosmian_crypto_base"]
ffi = ["interfaces"]
python = ["interfaces", "pyo3"]
wasm_bindgen = ["interfaces", "js-sys", "wasm-bindgen"]

[dependencies]
cosmian_bls12_381 = "0.4"
ff = "0.9"
getrandom = { version = "0.2", features = ["js"] }
group = "0.9"
hex = "0.4"
lazy_static = "1.4.0"
rand = "0.8"
rand_core = { version = "0.5", features = ["getrandom"] }
rand_hc = "0.3"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
thiserror = "1"

# Optional ones
cosmian_crypto_base = { version = "2.0", optional = true }
pyo3 = { version = "0.16", features = ["extension-module"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false

[profile.bench]
debug = true
